fix: update test when test is complete

--- a/question-bank-frontend/src/app/components/dashboard/dashboard.component.html
+++ b/question-bank-frontend/src/app/components/dashboard/dashboard.component.html
@@ -4,7 +4,7 @@
       Bem-vindo!
     </h1>
     <p class="lead text-secondary">
-      Este é o seu painel de controle do <strong>Sistema de Questões de Computação</strong>.
+      Este é o seu painel de controle do <strong>Sistema de Questões</strong>.
     </p>
   </div>
 </div>
